experimental pod job tweaks stuff + sniper defense tweaks
* Pod Manager now gets updated XCOM position by Sniper Defense alerts (if the unit survives).
* All pod job assignments minimum turns increased by 1 since the bugfix to pods freezing mean they would move 1 turn sooner.
* tweaked the turn timers for HQ assault pod job activations. This should spread stuff out more.
* Removed the legend-only extra flanking job from supply raids.
* Removed chosen supply raids from the HQ/big mission jobs lists. - should mean less enemies rush XCOM.
* Yellow alert pods using sniper defense code will now try to overwatch or hunker for second actions when visible, instead of just blindly moving towards XCOM.

Overall, this should improve the feeling of the slower long missions and reduce the amount of times XCOM gets rushed by the entire map on HQs and Supply Raids. However, this also does fix a loophole that previously allowed XCOM to exploit what happens when the pod manager never gets an actual position for xcom and instead vectors pods relative to the 0,0,0 location on the map.

I have tested the updated behaviors in both GOPs, supply raids, and HQs, but things still might be weird because it's XCOM AI

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -632,7 +632,7 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 
 ; Anti-Squadsight cheese behavior
 -Behaviors=(BehaviorName=TrySelectYellowAlertAction, NodeType=Selector, Child[0]=TryAttackPriorityTarget, Child[1]=YellowAlertMove)
-+Behaviors=(BehaviorName=TrySelectYellowAlertAction, NodeType=Selector, Child[0]=TryAttackPriorityTarget, Child[1]=SniperDefense, Child[2]=YellowAlertMove)
++Behaviors=(BehaviorName=TrySelectYellowAlertAction, NodeType=Selector, Child[0]=TryAttackPriorityTarget, Child[1]=SniperDefenseYellowAlert, Child[2]=YellowAlertMove)
 
 ; Fix for enemies attacking units on yellow alert (like Najas and Berserkers on Intel Raids)
 -Behaviors=(BehaviorName=SelectPriorityTargetForStandardShot, NodeType=Sequence, Child[0]=SetTargetStack-StandardShot, Child[1]=SelectPriorityTarget, Child[2]=HasValidTarget-StandardShot)
@@ -676,9 +676,25 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=SD_AbilitySelector, NodeType=Selector, child[0]=SD_FirstAction, child[1]=SD_LastAction)
 +Behaviors=(BehaviorName=SD_FirstAction, NodeType=Sequence, Child[0]=NotLastActionPoint, Child[1]=SD_FirstActionSelector)
 +Behaviors=(BehaviorName=SD_LastAction, NodeType=Sequence, Child[0]=IsLastActionPoint, Child[1]=SD_LastActionSelector)
-+Behaviors=(BehaviorName=SD_FirstActionSelector, NodeType=Selector, child[0]=MoveToAlertIfNotVisible, child[1]=MoveToAlert)   
-+Behaviors=(BehaviorName=SD_LastActionSelector, NodeType=Selector, Child[0]=MoveToAlertIfNotVisible, child[1]=MoveToAlert) 
++Behaviors=(BehaviorName=SD_FirstActionSelector, NodeType=Selector, child[0]=MoveToAlertIfNotVisible, child[1]=MoveToAlert)
++Behaviors=(BehaviorName=SD_LastActionSelector, NodeType=Selector, child[0]=MoveToAlertIfNotVisible, child[1]=MoveToAlert)
 
+
+
+
+; Yellow alert variant - adds hunker down for the second action, to slow pods down + have them take better cover:
+
++Behaviors=(BehaviorName=SniperDefenseYellowAlert, NodeType=Sequence, Child[0]=LWNoVisibleEnemiesToTeam, Child[1]=SetAlertDataStack, child[2]=SD_SelectBestAlert, Child[3]=HasValidAlertDataLocation, Child[4]=SD_YellowAlertAbilitySelector)
++Behaviors=(BehaviorName=SD_YellowAlertAbilitySelector, NodeType=Selector, child[0]=SD_FirstAction, child[1]=SD_LastActionYellowAlert)
++Behaviors=(BehaviorName=SD_LastActionYellowAlert, NodeType=Sequence, Child[0]=IsLastActionPoint, Child[1]=SD_LastActionSelectorYellowAlert)
+; Don't stand in the open
++Behaviors=(BehaviorName=SD_LastActionSelectorYellowAlert, NodeType=Selector, Child[0]=TryCowerOrOverwatchIfNotFlanked, child[1]=MoveToAlertIfNotVisible, child[2]=MoveToAlert) 
+
+; Allowed to hunker or overwatch if not flanked and is currently visible to the player
+; If this gets passed the not flanked and is visible conditions, it should always succeed. if not, we should move again
++Behaviors=(BehaviorName=TryCowerOrOverwatchIfNotFlanked, NodeType=Sequence, Child[0]=NotFlanked, child[1]=IsVisibleToPlayer, Child[2]=TryRandOverwatch50OrHunker)
+
++Behaviors=(BehaviorName=TryRandOverwatch50OrHunker, NodeType=Selector, Child[0]=RandOverwatch50, Child[1]=DoCower, Child[3]=SkipMove)
 
 ; Replace panic responses
 -Behaviors=(BehaviorName=Panicked_FirstAction_Selector, NodeType=Selector, \\
