--- a/LongWarOfTheChosen/Config/XComLW_PodManager.ini
+++ b/LongWarOfTheChosen/Config/XComLW_PodManager.ini
@@ -128,7 +128,7 @@
 +MissionJobs=( \\
     FriendlyName="Vet 1", \\
     Difficulties[0]=1, \\
-    MinTurn=2, \\
+    MinTurn=3, \\
     Cooldown=2, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -144,7 +144,7 @@
 +MissionJobs=( \\
     FriendlyName="Vet 2", \\
     Difficulties[0]=1, \\
-    MinTurn=4, \\
+    MinTurn=5, \\
     Cooldown=2, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -160,7 +160,7 @@
 +MissionJobs=( \\
     FriendlyName="Vet 3", \\
     Difficulties[0]=1, \\
-    MinTurn=10, \\
+    MinTurn=11, \\
 	Cooldown=2, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -176,7 +176,7 @@
 +MissionJobs=( \\
     FriendlyName="Vet 4", \\
     Difficulties[0]=1, \\
-    MinTurn=12, \\
+    MinTurn=13, \\
 	Cooldown=2, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -193,7 +193,7 @@
 +MissionJobs=( \\
     FriendlyName="Commander", \\
     Difficulties[0]=2, \\
-    MinTurn=2, \\
+    MinTurn=3, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
 	ExcludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -208,7 +208,7 @@
 +MissionJobs=( \\
     FriendlyName="Commander 2", \\
     Difficulties[0]=2, \\
-    MinTurn=2, \\
+    MinTurn=4, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
 	ExcludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -223,7 +223,7 @@
 +MissionJobs=( \\
     FriendlyName="Commander 3", \\
     Difficulties[0]=2, \\
-    MinTurn=10, \\
+    MinTurn=11, \\
 	Cooldown=2, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -239,7 +239,7 @@
 +MissionJobs=( \\
     FriendlyName="Commander 3", \\
     Difficulties[0]=2, \\
-    MinTurn=12, \\
+    MinTurn=13, \\
 	Cooldown=2, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -256,7 +256,7 @@
 +MissionJobs=( \\
     FriendlyName="Legend default 1", \\
     Difficulties[0]=3, \\
-    MinTurn=1, \\
+    MinTurn=2, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
 	ExcludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -271,7 +271,7 @@
 +MissionJobs=( \\
     FriendlyName="Legend default 2", \\
     Difficulties[0]=3, \\
-    MinTurn=2, \\
+    MinTurn=3, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
 	ExcludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -286,7 +286,7 @@
 +MissionJobs=( \\
     FriendlyName="Legend default 3", \\
     Difficulties[0]=3, \\
-    MinTurn=4, \\
+    MinTurn=5, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
 	ExcludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -301,7 +301,7 @@
 +MissionJobs=( \\
     FriendlyName="Legend default 4", \\
     Difficulties[0]=3, \\
-    MinTurn=8, \\
+    MinTurn=9, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
 	ExcludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -316,7 +316,7 @@
 +MissionJobs=( \\
     FriendlyName="Legend default 5", \\
     Difficulties[0]=3, \\
-    MinTurn=10, \\
+    MinTurn=11, \\
 	ExcludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	ExcludedMissionFamilies[1]="GoldenPath4_LW", \\
 	ExcludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -333,7 +333,7 @@
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 1", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=1, \\
+    MinTurn=2, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
 	IncludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -341,14 +341,13 @@
 	IncludedMissionFamilies[4]="GoldenPath1_LW", \\
 	IncludedMissionFamilies[5]="Sabotage_LW", \\
 	IncludedMissionFamilies[6]="SupplyLineRaid_LW", \\
-    IncludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Flank \\
     )
 
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 2", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=2, \\
+    MinTurn=3, \\
 	MinSize=4, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -357,29 +356,28 @@
 	IncludedMissionFamilies[4]="GoldenPath1_LW", \\
 	IncludedMissionFamilies[5]="Sabotage_LW", \\
 	IncludedMissionFamilies[6]="SupplyLineRaid_LW", \\
-    IncludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Intercept \\
     )
 
+; Extra flank job only on bigger missions
 +MissionJobs=( \\
     FriendlyName="HQ Assault Leg 2a", \\
     Difficulties[0]=3, \\
-    MinTurn=1, \\
+    MinTurn=4, \\
+    Cooldown=2, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
 	IncludedMissionFamilies[2]="GoldenPath3_LW", \\
 	IncludedMissionFamilies[3]="GoldenPath2_LW", \\
 	IncludedMissionFamilies[4]="GoldenPath1_LW", \\
 	IncludedMissionFamilies[5]="Sabotage_LW", \\
-	IncludedMissionFamilies[6]="SupplyLineRaid_LW", \\
-    IncludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Flank \\
     )
 
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 3", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=2, \\
+    MinTurn=3, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
 	IncludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -387,14 +385,13 @@
 	IncludedMissionFamilies[4]="GoldenPath1_LW", \\
 	IncludedMissionFamilies[5]="Sabotage_LW", \\
 	IncludedMissionFamilies[6]="SupplyLineRaid_LW", \\
-    IncludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
 
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 4", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=8, \\
+    MinTurn=9, \\
 	MinSize=4, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
@@ -403,14 +400,13 @@
 	IncludedMissionFamilies[4]="GoldenPath1_LW", \\
 	IncludedMissionFamilies[5]="Sabotage_LW", \\
 	IncludedMissionFamilies[6]="SupplyLineRaid_LW", \\
-    IncludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Intercept, Jobs[1]=Flank \\
     )
 
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 5", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=8, \\
+    MinTurn=10, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
 	IncludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -418,14 +414,13 @@
 	IncludedMissionFamilies[4]="GoldenPath1_LW", \\
 	IncludedMissionFamilies[5]="Sabotage_LW", \\
 	IncludedMissionFamilies[6]="SupplyLineRaid_LW", \\
-    IncludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Defend \\
     )
 
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 6", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=19, \\
+    MinTurn=20, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
 	IncludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -433,14 +428,13 @@
 	IncludedMissionFamilies[4]="GoldenPath1_LW", \\
 	IncludedMissionFamilies[5]="Sabotage_LW", \\
 	IncludedMissionFamilies[6]="SupplyLineRaid_LW", \\
-    IncludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Flank \\
     )
 
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 7", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=20, \\
+    MinTurn=21, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
 	IncludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -454,7 +448,7 @@
 +MissionJobs=( \\
     FriendlyName="HQ Assault Vet/Cmdr/Leg 8", \\
     Difficulties[0]=1, Difficulties[1]=2, Difficulties[2]=3, \\
-    MinTurn=20, \\
+    MinTurn=21, \\
 	IncludedMissionFamilies[0]="AssaultAlienBase_LW", \\
 	IncludedMissionFamilies[1]="GoldenPath4_LW", \\
 	IncludedMissionFamilies[2]="GoldenPath3_LW", \\
@@ -584,7 +578,7 @@
     AllowGuardPods=true, \\
     EncounterID="AvengerDefense_DisruptorGuards_LW", \\
     AlertCause=eAC_MapWideAlert_Peaceful, \\
-    AlertTag=defend, \\
+    AlertTag=Defend, \\
     LeaderAIJob=Defender, \\
     Unlimited=true, \\
     Priority=30, \\
@@ -631,7 +625,7 @@
     RequireYellowAlert=true, \\
     AlertCause=eAC_MapWideAlert_Peaceful, \\
     RequireGuardPods=true, \\
-    AlertTag=defend, \\
+    AlertTag=Defend, \\
     LeaderAIJob=Defender, \\
     Unlimited=true, \\
     Jobs[0]=Defend, \\
@@ -644,7 +638,7 @@
     RequireYellowAlert=true, \\
     AlertCause=eAC_MapWideAlert_Peaceful, \\
     RequireGuardPods=true, \\
-    AlertTag=defend, \\
+    AlertTag=Defend, \\
     LeaderAIJob=Defender, \\
     Unlimited=true, \\
     Jobs[0]=Defend, \\
@@ -657,7 +651,7 @@
     RequireYellowAlert=true, \\
     AlertCause=eAC_MapWideAlert_Peaceful, \\
     RequireGuardPods=true, \\
-    AlertTag=defend, \\
+    AlertTag=Defend, \\
     LeaderAIJob=Defender, \\
     Unlimited=true, \\
     Jobs[0]=Defend, \\
@@ -670,7 +664,7 @@
     RequireYellowAlert=true, \\
     AlertCause=eAC_MapWideAlert_Peaceful, \\
     RequireGuardPods=true, \\
-    AlertTag=defend, \\
+    AlertTag=Defend, \\
     LeaderAIJob=Defender, \\
     Unlimited=true, \\
     Jobs[0]=Defend, \\
@@ -683,7 +677,7 @@
     RequireYellowAlert=true, \\
     AlertCause=eAC_MapWideAlert_Peaceful, \\
     RequireGuardPods=true, \\
-    AlertTag=defend, \\
+    AlertTag=Defend, \\
     LeaderAIJob=Defender, \\
     Unlimited=true, \\
     Jobs[0]=Defend, \\
